--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -24,6 +24,8 @@ dependencies:
   intl: ^0.15.8
   flutter:
     sdk: flutter
+  provider: ^4.1.2
+  http: ^0.12.1
 
 
   # The following adds the Cupertino Icons font to your application.
